--- a/src/app/request-summary/request-summary.component.html
+++ b/src/app/request-summary/request-summary.component.html
@@ -4,48 +4,26 @@
 <div class="row justify-content-center" *ngIf="request">
   <div class="col-11">
     <div class="card" >
-      <div class="card-header">
-        Resumen de envio
-      </div>
+      <div class="card-header"> Resumen de envio </div>
       <div class="card-body px-5">
         <div class="row ">
-          <div class="col-3">
-            Nombre de contacto:
-          </div>
-          <div class="col-3">
-            {{request.delivery.cName}}
-          </div>
-          <div class="col-3">
-            Telefono de contacto:
-          </div>
-          <div class="col-3">
-            {{request.delivery.cPhone}}
-          </div>
+          <div class="col-3"> Nombre de contacto: </div>
+          <div class="col-3"> {{request.delivery.cName}} </div>
+          <div class="col-3"> Telefono de contacto: </div>
+          <div class="col-3"> {{request.delivery.cPhone}} </div>
         </div>
         <hr>
         <div class="row ">
           <hr>
-          <div class="col-3">
-            Direccion:
-          </div>
-          <div class="col-9">
-            {{request.delivery.address.city}}, {{request.delivery.address.com}}, {{request.delivery.address.street}}, {{request.delivery.address.sNumber}}. {{request.delivery.address.details}}
-          </div>
+          <div class="col-3"> Direccion: </div>
+          <div class="col-9"> {{request.delivery.address.city}}, {{request.delivery.address.com}}, {{request.delivery.address.street}}, {{request.delivery.address.sNumber}}. {{request.delivery.address.details}} </div>
         </div>
         <hr>
         <div class="row ">
-          <div class="col-3">
-            Motivo:
-          </div>
-          <div class="col-3">
-            {{request.motive}}
-          </div>
-          <div class="col-3">
-            Horario de recepcion:
-          </div>
-          <div class="col-3">
-            {{request.delivery.fromTime}} : {{request.delivery.toTime}}
-          </div>
+          <div class="col-3"> Motivo: </div>
+          <div class="col-3"> {{request.motive}} </div>
+          <div class="col-3"> Horario de recepcion: </div>
+          <div class="col-3"> {{request.delivery.fromTime}} : {{request.delivery.toTime}} </div>
         </div>
       </div>
     </div>
@@ -55,14 +33,12 @@
 <div class="row justify-content-center">
   <div class="col-11">
     <div class="card" >
-      <div class="card-header px-5">
-        Lista de recuperaciones
-      </div>
+      <div class="card-header px-5"> Lista de recuperaciones </div>
       <div class="card-body px-5">
         <div class="row ">
           <div class="col-2">Usuario</div>
           <div class="col-3">Dispositivo</div>
-         <div class="col-1">Disco</div>
+          <div class="col-1">Disco</div>
           <div class="col-2">Eliminados</div>
           <div class="col-2">Fecha</div>
           <div class="col-2">Tamano</div>
@@ -82,8 +58,8 @@
 <div class="container-fluid">
   <div class="row justify-content-center ">
     <div class="col-10 d-flex justify-content-between">
-        <app-go-back></app-go-back>
-      <a class="btn btn-primary" [routerLink]="['/dashboard']">Enviar solicitud</a>
+      <app-go-back></app-go-back>
+      <button class="btn btn-primary" type="button" (click)="sendFullRequest()">Enviar solicitud</button>
     </div>
   </div>
 </div>
