--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,7 +11,7 @@
         <div class="row justify-content-center">
           <label class="col-3">Correo</label>
           <div class="col-3">
-            <input type="email" class="form-control" formControlName="userid" placeholder="usuario@empresa.cl">
+            <input type="email" class="form-control" formControlName="userId" placeholder="usuario@empresa.cl">
             <div *ngIf="submitted && f.userid.errors" class="help-block">
               <div *ngIf="f.userid.errors.required">Correo es requerido</div>
             </div>
