--- a/src/app/request-form/request-form.component.html
+++ b/src/app/request-form/request-form.component.html
@@ -46,11 +46,11 @@
             <label class="col-3">Horario de recepcion</label>
             <label class="col-1">Desde:</label>
             <div class="col-2">
-              <input type="time" class="form-control" formControlName="fromTime" required>
+              <input type="time" class="form-control" formControlName="horarioDesde" required>
             </div>
             <label class="col-1 col-form-label">Hasta:</label>
             <div class="col-2">
-              <input type="time" class="form-control" formControlName="toTime" required>
+              <input type="time" class="form-control" formControlName="horarioHasta" required>
             </div>
           </div>
 
