--- a/src/app/request-list/request-list.component.html
+++ b/src/app/request-list/request-list.component.html
@@ -41,7 +41,7 @@
                     <label class="col-3">Usuario</label>
                     <div class="col">
                       <select class="form-control" formControlName="user">
-                        <option *ngFor="let user of users" value={{user}}>{{user}}</option>
+                        <option *ngFor="let user of users" value={{user.correo}}>{{user.correo}}</option>
                       </select>
                     </div>
                   </div>
