--- a/src/app/request-list/request-list.component.html
+++ b/src/app/request-list/request-list.component.html
@@ -49,7 +49,7 @@
                     <label class="col-3" >Dispositivo</label>
                     <div class="col">
                       <select class="form-control" formControlName="machine">
-                        <option *ngFor="let machine of machines" value={{machine}}>{{machine}}</option>
+                        <option *ngFor="let machine of machines" value={{machine.nombre}}>{{machine.nombre}}</option>
                       </select>
                     </div>
                   </div>
