--- a/src/app/request-details/request-details.component.html
+++ b/src/app/request-details/request-details.component.html
@@ -1,33 +1,33 @@
 <app-top-bar>
 </app-top-bar>
-<div class="row justify-content-center">
-  <div class="col-3 offset-6 d-flex justify-content-between">
-    <button class="btn btn-primary" type="button" (click)="startRequest()">Lanzar recuperacion</button>
-    <button class="btn btn-danger" type="button" (click)="cancelRequest()">Cancelar solicitud</button>
-  </div>
-</div>
+<!-- <div class="row justify-content-center"> -->
+<!--   <div class="col-3 offset-6 d-flex justify-content-between"> -->
+<!--     <button class="btn btn-primary" type="button" (click)="startRequest()">Lanzar recuperacion</button> -->
+<!--     <button class="btn btn-danger" type="button" (click)="cancelRequest()">Cancelar solicitud</button> -->
+<!--   </div> -->
+<!-- </div> -->
 <div class="row justify-content-center" *ngIf="request">
   <div class="col-11">
     <div class="card" >
       <div class="card-header d-flex justify-content-between">
         <span>Resumen</span>
-        <button href="#" class="btn icon-pair justify-content-center btn-primary">
-          <i class="material-icons md-24 md-light px-2">local_shipping</i>
-          <span>Datos de envio</span>
-        </button>
+        <!-- <button href="#" class="btn icon-pair justify-content-center btn-primary"> -->
+        <!--   <i class="material-icons md-24 md-light px-2">local_shipping</i> -->
+        <!--   <span>Datos de envio</span> -->
+        <!-- </button> -->
       </div>
       <div class="card-body px-5">
         <div class="row ">
-          <div class="col"> Archivos recuperados/totales: </div>
+          <div class="col"> Nombre de contacto
           <div class="col"> {{request.delivery.cName}} </div>
-          <div class="col"> Tamano recuperado/total: </div>
+          <div class="col"> Telefono de contacto </div>
           <div class="col"> {{request.delivery.cPhone}} </div>
         </div>
         <hr>
         <div class="row ">
-          <div class="col"> Fecha de solicitud: </div>
+          <div class="col"> Direccion: </div>
           <div class="col"> {{request.motive}} </div>
-          <div class="col"> Estado: </div>
+          <div class="col"> Horario de retiro: </div>
           <div class="col"> {{request.delivery.fromTime}} : {{request.delivery.toTime}} </div>
         </div>
       </div>
@@ -43,15 +43,15 @@
         <div class="row ">
           <div class="col-2">Usuario</div>
           <div class="col-3">Dispositivo</div>
-          <div class="col-1">Disco</div>
-          <div class="col-2">Archivos totales/recuperados</div>
-          <div class="col-2">Tamano recuperado/total</div>
+          <!-- <div class="col-1">Disco</div> -->
+          <div class="col-2">Recuperar Eliminados</div>
+          <div class="col-2">Fecha de recuperacion</div>
           <div class="col-2">Acciones</div>
         </div>
         <div class="row border-top" *ngFor="let recovery of recoveries">
           <div class="col-2 text-truncate">{{recovery.user}}</div>
           <div class="col-3 text-truncate">{{recovery.machine}}</div>
-          <div class="col-1">{{recovery.disk}}</div>
+          <!-- <div class="col-1">{{recovery.disk}}</div> -->
           <div class="col-2">{{recovery.deleted}}</div>
           <div class="col-2">{{recovery.date}}</div>
           <div class="col-2 justify-content-end">
