--- a/src/app/request-form/request-form.component.html
+++ b/src/app/request-form/request-form.component.html
@@ -56,7 +56,7 @@
 
           <div class="row d-flex justify-content-between">
             <app-go-back></app-go-back>
-            <button class="btn btn-primary" type="submit">Siguiente</button>
+            <button class="btn btn-primary" type="submit">Enviar</button>
           </div>
         </form>
       </div>
