--- a/src/app/request-form/request-form.component.html
+++ b/src/app/request-form/request-form.component.html
@@ -55,7 +55,7 @@
           </div>
 
           <div class="row d-flex justify-content-between">
-            <button class="btn btn-danger" (click)="back()">Enviar</button>
+            <button class="btn btn-danger" (click)="back()">Atras</button>
             <button class="btn btn-primary" type="submit">Enviar</button>
           </div>
         </form>
